--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         font-family: "Times New Roman", Times, serif;
       }
       .btn {
-        font-size: 20px;
+        font-size: 18px;
       }
       p {
         font-size: 23px;
@@ -36,14 +36,14 @@
         background-color: rgb(0, 174, 255);
       }
       input {
-        width: 180px;
-        height: 50px;
+        width: 150px;
+        height: 40px;
         font-size: medium;
         text-align: center;
       }
       .navbar-brand {
         padding-left: 40%;
-        font-size: 40px;
+        font-size: 35px;
         font-family: "Brush Script MT", cursive;
       }
       .row {
@@ -52,27 +52,10 @@
       .card {
         margin: 40px 15px 30px 20px;
       }
-      /* .last {
-        margin: 50px -120px 0 50%;
-      } */
-      .active {
-        font-size: 24px;
-      }
     </style>
   </head>
 
   <body>
-    <!-- <div class="alert alert-primary alert-dismissible fade show" role="alert">
-      <strong>Holy guacamole!</strong> You should check in on some of those
-      fields below.
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="alert"
-        aria-label="Close"
-      ></button>
-    </div> -->
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Toll Transaction</a>
@@ -126,13 +109,14 @@
         <div class="card">
           <div class="card-body">
             <p>The total collected amount is</p>
-            <!-- <input type="text" id="inputArea" /> <br /><br /> -->
+            <input type="text" id="inputArea" /> <br /><br />
             <button
               type="button"
-              class="list-group-item list-group-item-action active"
+              class="btn btn-danger btn-lg"
               aria-current="true"
+              onclick="writeContract()"
             >
-              Rs. 10000
+              Send to the Contract
             </button>
             <p id="writtenData"></p>
           </div>
@@ -172,6 +156,19 @@
       const connectContract = async () => {
         const ABI = [
           {
+            inputs: [
+              {
+                internalType: "uint256",
+                name: "amount",
+                type: "uint256",
+              },
+            ],
+            name: "CheckAmount",
+            outputs: [],
+            stateMutability: "nonpayable",
+            type: "function",
+          },
+          {
             inputs: [],
             name: "getAmount",
             outputs: [
@@ -181,17 +178,17 @@
                 type: "string",
               },
             ],
-            stateMutability: "nonpayable",
+            stateMutability: "view",
             type: "function",
           },
         ];
 
-        const Address = "0x74c1208B2b9281a25924E96B1EbdC847517a7346";
+        const Address = "0xD66FCa336881DEE5726123077451F43ffcF05ec7";
         window.web3 = await new Web3(window.ethereum);
         window.contract = await new window.web3.eth.Contract(ABI, Address);
         document.getElementById(
           "contractArea"
-        ).innerHTML = `Successfully connected to smart contract address: ${Address}`;
+        ).innerHTML = `Connection successful and address: ${Address}`;
       };
 
       // Read the data from contract
